--- a/p0/.classpath
+++ b/p0/.classpath
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <classpath>
-	<classpathentry kind="con"
-		path="org.eclipse.jdt.launching.JRE_CONTAINER" />
-	<classpathentry kind="src" path="" />
-	<classpathentry kind="output"
-		path="OnlineStore/out/production/p0" />
+	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER">
+		<attributes>
+			<attribute name="module" value="true"/>
+		</attributes>
+	</classpathentry>
+	<classpathentry excluding="OnlineStore/" kind="src" path=""/>
+	<classpathentry kind="output" path="OnlineStore/out/production/p0"/>
 </classpath>
